...
            android:id="@+id/search_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary" />

        <SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/padding_normal"
            android:iconifiedByDefault="false"
            android:searchIcon="@color/colorPrimary"
            android:transitionGroup="true"
...
