...
        <!--flat:-->
        <!--style="?android:attr/borderlessButtonStyle"-->
        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/button_launch_select_sites"
            android:theme="@style/IntroButtons"
            android:text="@string/button_home_select_reefs"
            android:layout_weight=".5"/>

        <View
            android:layout_width="5dp"
...
            />

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/button_launch_browse_species"
            android:text="@string/button_home_browse_species"
            android:theme="@style/IntroButtons"
            android:layout_weight=".5"/>

    </LinearLayout>

...
