<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="me.jludden.reeflifesurvey.MainActivity"
    >

    <!--app:layoutBehavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">-->

    <!--
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"-->

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/recycler_view_card_list"
        android:name="me.jludden.reeflifesurvey.CardViewFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layoutManager="LinearLayoutManager"
        tools:context="me.jludden.reeflifesurvey.me.jludden.reeflifesurvey.BrowseFish.CardViewFragment"
        tools:listitem="@layout/card_view_item"
    />

    <!-- Progress bar overlay; shown while loading -->
    <include layout="@layout/progress_bar"/>

</RelativeLayout>